--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <div class="row">
                 <div class="col-8">
                     <div style="padding-top:10px;">
-                        <div class="carousel slide" data-ride="carousel" data-interval="5000" id="carousel-2" style="/*min-height:500px;*/height:308px;margin-right:0;padding-top:0px;margin-bottom:14px;">
+                      <!-- data-interval="10000" interval is in milliseconds. 1000 = 1 second -> so 1000 * 10 = 10 seconds -->
+                        <div class="carousel slide" data-ride="carousel" data-interval="10000" id="carousel-2"  style="/*min-height:500px;*/height:308px;margin-right:0;padding-top:0px;margin-bottom:14px;">
                             <div class="carousel-inner d-block" role="listbox" style="width:auto;height:275px;">
                                 <div class="carousel-item"><img class="w-100 d-block" src="assets/img/S__24641574.jpg" alt="Slide Image" style="height:0;">
                                     <div class="card-container manual-flip">
@@ -40,8 +41,8 @@
                                                 <figure class="figure" style="margin-right:10px;"><img class="img-fluid figure-img zoomImage rounded" src="https://upload.cc/i1/2018/08/30/eGh92C.jpg"></figure>
                                                 <div class="d-flex flex-column flex-wrap" style="margin-left:10px;">
                                                     <div>
-                                                        <h4><strong>歷史系辛法春老師協助完拍「不老時光機」節目</strong><br></h4><button class="btn btn-info btn-sm btn-outline-light" type="button" disabled="disabled" style="background-color:rgb(23,162,184);font-size:12px;height:20px;color:rgb(255,255,255);padding-top:0px;margin-bottom:5px;margin-top:2px;">老年人口</button>
-                                                        <p>由社科院老人USR計劃與中嘉電視台合作的「不老時光機」節目於八月底正式完拍。透過遊戲方式促進長者對生命的反思與安頓，一起期待在北大特區的首映會吧！</p>
+                                                        <h4><strong>歷史系辛法春老師協助完拍「不老時光機」節目</strong><br></h4><button class="btn btn-info btn-sm btn-outline-light" type="button" style="background-color:rgb(23,162,184);font-size:12px;height:20px;color:rgb(255,255,255);padding-top:0px;margin-bottom:7px;margin-top:2px;">老年人口</button>
+                                                        <p style="font-size: 17px">由社科院老人USR計劃與中嘉電視台合作的「不老時光機」節目於八月底正式完拍。透過遊戲方式促進長者對生命的反思與安頓，一起期待在北大特區的首映會吧！</p>
                                                     </div>
                                                 </div>
                                             </div>
