--- a/index.html
+++ b/index.html
@@ -239,7 +239,8 @@
             </div>
             <div class="col-4" style="height:230px;">
                 <div class="d-block" style="height:470px;margin-top:10px;margin-bottom:10px;">
-                    <div class="carousel slide" data-ride="carousel" id="carousel-1" style="min-height:470px;height:470px;">
+                  <!-- add the data-interval setting to control the duration of each slide -->
+                    <div class="carousel slide" data-ride="carousel" data-interval="10000" id="carousel-1" style="min-height:470px;height:470px;">
                         <div class="carousel-inner d-block" role="listbox" style="width:auto;">
                             <div class="carousel-item" style="height:496px;"><img class="w-100 d-block" src="assets/img/S__24641574.jpg" alt="Slide Image"></div>
                             <div class="carousel-item"><img class="w-100 d-block" src="https://i.imgur.com/O0LZitA.jpg" alt="Slide Image"></div>
