--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
     <link rel="stylesheet" href="assets/css/temp-food.css">
     <link rel="stylesheet" href="assets/css/temp-running-news.css">
     <link rel="stylesheet" href="assets/css/temp-weather.css">
+    <style media="screen">
+      body {
+        font-family: "Helvetica Nueue", "Arial", "LiHei Pro", "Microsoft JhengHei", "黑體-繁", "微軟正黑體", sans-serif;
+      }
+    </style>
 </head>
 
 <body>
