新增USR辦公室分機號碼（67004)

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                             switch (mode) {
                                 case 'social': toast("電話：02-8674-1111 轉 67001-67002", null,5000)
                                 ;break;
-                                case 'usr': toast("電話：02-8674-1111", null, 5000); break;
+                                case 'usr': toast("電話：02-8674-1111 轉 67004", null, 5000); break;
                                 case 'callback': toast("電話：02-8674-1111 轉 67046-67050", null,5000)
                                 ;break;
                                 case 'timeout': toast("電話：02-8674-1111 轉 67012-67016", null, 5000); break;
