--- a/index.html
+++ b/index.html
@@ -301,10 +301,10 @@
                         <li data-target="#carousel-1" data-slide-to="3"></li>
                     </ol>
                 </div>
-            </div><a class="weatherwidget-io" href="https://forecast7.com/zh-tw/25d02121d46/new-taipei-city/" data-label_1="新北市" data-label_2="天氣" data-font="微軟正黑體 (Microsoft JhengHei)" data-days="5" data-theme="pure" >新北市 天氣</a>
-<script>
-!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
-</script></div>
+            </div>
+
+
+            </div>
     </div>
     </div>
     </div>
