--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
                       <!-- data-interval="13000" interval is in milliseconds. 1000 = 1 second -> so 1000 * 13 = 13 seconds -->
                         <div class="carousel slide" data-ride="carousel" data-interval="13000" id="carousel-2"  style="/*min-height:500px;*/height:308px;margin-right:0;padding-top:0px;margin-bottom:14px;">
                             <div class="carousel-inner d-block" role="listbox" style="width:auto;height:275px;">
+
+                                <!-- USR活動跑馬燈1 -->
                                 <div class="carousel-item"><img class="w-100 d-block" src="assets/img/S__24641574.jpg" alt="Slide Image" style="height:0;">
                                     <div class="card-container manual-flip">
                                         <div class="card">
@@ -48,7 +50,7 @@
                                                 <figure class="figure" style="margin-right:10px;"><img class="img-fluid figure-img zoomImage rounded" src="https://upload.cc/i1/2018/08/30/eGh92C.jpg"></figure>
                                                 <div class="d-flex flex-column flex-wrap" style="margin-left:10px;">
                                                     <div>
-                                                        <h4><strong>歷史系辛法春老師協助完拍「不老時光機」節目</strong><br></h4><button class="btn btn-info btn-sm btn-outline-light" type="button" style="background-color:rgb(23,162,184);font-size:12px;height:20px;color:rgb(255,255,255);padding-top:0px;margin-bottom:7px;margin-top:2px;">老年人口</button>
+                                                        <h4><strong>歷史系辛法春老師協助完拍「不老時光機」節目</strong><br></h4><button class="btn btn-info btn-sm btn-outline-light" type="button" style="background-color:rgb(23,162,184);font-size:12.5px;height:20px;color:rgb(255,255,255);padding-top:0px;margin-bottom:7px;margin-top:2px;">老年人口</button>
                                                         <p style="font-size: 17px">由社科院老人USR計劃與中嘉電視台合作的「不老時光機」節目於八月底正式完拍。透過遊戲方式促進長者對生命的反思與安頓，一起期待在北大特區的首映會吧！</p>
                                                     </div>
                                                 </div>
@@ -56,6 +58,8 @@
                                         </div>
                                     </div>
                                 </div>
+
+                                <!-- USR活動跑馬燈2 -->
                                 <div class="carousel-item active"><img class="w-100 d-block" src="http://placeholdit.imgix.net/~text?txtsize=42&amp;txt=Carousel+Image&amp;w=1400&amp;h=600" alt="Slide Image" style="height:0px;">
                                     <div class="card-container manual-flip">
                                         <div class="card">
@@ -63,9 +67,9 @@
                                                 <figure class="figure flex-shrink-0 rounded" style="margin-right:10px;height:250px;width:210px;margin-bottom:5px;"><img class="figure-img rounded" src="https://i.imgur.com/ZJ2NNI5.jpg" style="width:100%;height:100%;"></figure>
                                                 <div class="d-flex flex-column flex-wrap" style="margin-left:10px;">
                                                     <h3><strong>北大祖孫情音樂會</strong></h3>
-                                                    <div class="d-inline-flex justify-content-start align-items-center"><button class="btn btn-info btn-sm btn-outline-light" type="button" style="background-color:rgb(23,162,184);font-size:12px;height:20px;color:rgb(255,255,255);padding-top:0px;margin:2.5px;margin-bottom:2px;margin-top:2px;margin-right:2px;">老人年口</button>
+                                                    <div class="d-inline-flex justify-content-start align-items-center"><button class="btn btn-info btn-sm btn-outline-light" type="button" style="background-color:rgb(23,162,184);font-size:12.5px;height:20px;color:rgb(255,255,255);padding-top:0px;margin:2.5px;margin-bottom:2px;margin-top:2px;margin-right:2px;">老人年口</button>
                                                         <button
-                                                            class="btn btn-info btn-sm btn-outline-light" type="button" style="background-color:rgb(23,162,184);font-size:12px;height:20px;color:rgb(255,255,255);padding-top:0px;margin:2.5px;margin-top:2px;">婦幼年口</button><button class="btn btn-info btn-sm btn-outline-light" type="button" style="background-color:rgb(23,162,184);font-size:12px;height:20px;color:rgb(255,255,255);padding-top:0px;margin:2.5px;margin-bottom:2px;margin-top:2px;">社區經營</button></div>
+                                                            class="btn btn-info btn-sm btn-outline-light" type="button" style="background-color:rgb(23,162,184);font-size:12.5px;height:20px;color:rgb(255,255,255);padding-top:0px;margin:2.5px;margin-top:2px;">婦幼年口</button><button class="btn btn-info btn-sm btn-outline-light" type="button" style="background-color:rgb(23,162,184);font-size:12.5px;height:20px;color:rgb(255,255,255);padding-top:0px;margin:2.5px;margin-bottom:2px;margin-top:2px;">社區經營</button></div>
                                                     <div
                                                         class="d-inline-flex align-items-center flex-nowrap" style="margin:1px;"><i class="fa fa-clock-o" style="font-size:20px;"></i>
                                                         <p style="margin-bottom:0px;margin-left:10px;font-size:17px;">8/26 (三）15:00 ~ 18:00&nbsp;</p>
@@ -81,12 +85,31 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- USR活動跑馬燈3 -->
+                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/S__24641574.jpg" alt="Slide Image" style="height:0;">
+                                <div class="card-container manual-flip">
+                                    <div class="card">
+                                        <div class="card-body d-flex align-content-start front">
+                                            <figure class="figure" style="margin-right:10px;"><img class="img-fluid figure-img zoomImage rounded" src="assets/img/USR_Website_be_online.png"></figure>
+                                            <div class="d-flex flex-column flex-wrap" style="margin-left:10px;">
+                                                <div>
+                                                    <h4><strong>社科院社會責任實踐計畫平台網站上線囉！</strong><br></h4><button class="btn btn-info btn-sm btn-outline-light" type="button" style="background-color:rgb(23,162,184);font-size:12.5px;height:20px;color:rgb(255,255,255);padding-top:0px;margin-bottom:7px;margin-top:2px;">社會實踐計畫大事紀</button>
+                                                    <p style="font-size: 17px">由社科院老人USR計劃與中嘉電視台合作的「不老時光機」節目於八月底正式完拍。透過遊戲方式促進長者對生命的反思與安頓，一起期待在北大特區的首映會吧！</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
                         </div>
                         <div class="invisible"><a class="carousel-control-prev" href="#carousel-2" role="button" data-slide="prev"><span class="carousel-control-prev-icon"></span><span class="sr-only">Previous</span></a><a class="carousel-control-next" href="#carousel-2" role="button"
                                 data-slide="next"><span class="carousel-control-next-icon"></span><span class="sr-only">Next</span></a></div>
                         <ol class="carousel-indicators" style="margin-bottom:-9px;color:#ffffff;background-color:#f7f5f5;height:9px;padding-top:3px;">
                             <li data-target="#carousel-2" data-slide-to="0"></li>
                             <li data-target="#carousel-2" data-slide-to="1" class="active"></li>
+                            <li data-target="#carousel-2" data-slide-to="2" class="active"></li>
                         </ol>
                     </div>
                     </div>
