新增USR網頁上線新聞跑馬燈

--- a/index.html
+++ b/index.html
@@ -94,8 +94,13 @@
                                             <figure class="figure" style="margin-right:10px;"><img class="img-fluid figure-img zoomImage rounded" src="assets/img/USR_Website_be_online.png"></figure>
                                             <div class="d-flex flex-column flex-wrap" style="margin-left:10px;">
                                                 <div>
-                                                    <h4><strong>社科院社會責任實踐計畫平台網站上線囉！</strong><br></h4><button class="btn btn-info btn-sm btn-outline-light" type="button" style="background-color:rgb(23,162,184);font-size:12.5px;height:20px;color:rgb(255,255,255);padding-top:0px;margin-bottom:7px;margin-top:2px;">社會實踐計畫大事紀</button>
-                                                    <p style="font-size: 17px">由社科院老人USR計劃與中嘉電視台合作的「不老時光機」節目於八月底正式完拍。透過遊戲方式促進長者對生命的反思與安頓，一起期待在北大特區的首映會吧！</p>
+                                                    <h4><strong>社科院社會責任實踐計畫平台網站上線囉！</strong><br></h4>
+
+                                                    <button class="btn btn-info btn-sm btn-outline-light" type="button" style="background-color:rgb(23,162,184);font-size:12.5px;height:20px;color:rgb(255,255,255);padding-top:0px;margin-bottom:7px;margin-top:2px;">社會實踐計畫大事紀</button>
+
+                                                    <p style="font-size: 17px">社科院USR累積超過一年的執行，舉辦過大大小小的活動，近期完成了架設活動宣傳與精彩回顧的網站，未來更加精彩不漏接！
+                                                    </p>
+
                                                 </div>
                                             </div>
                                         </div>
