更新活動內容

--- a/index.html
+++ b/index.html
@@ -158,19 +158,19 @@
                                 <tbody>
                                     <tr>
                                         <td style="width:20%;">
-                                            <p style="margin-bottom:0px;">08-26</p>
-                                            <p style="margin-bottom:0px;">03:00pm</p>
+                                            <p style="margin-bottom:0px;">10-19</p>
+                                            <p style="margin-bottom:0px;">10:00am</p>
                                             <p style="margin-bottom:0px;">USR</p>
                                         </td>
-                                        <td style="width:25%;">音樂會</td>
-                                        <td style="width:25%;">祖孫情音樂會</td>
+                                        <td style="width:25%;">講座</td>
+                                        <td style="width:25%;">高齡社區系列講座：高齡者與災害管理</td>
                                         <td>
                                           <div class="container-fluid">
                                           <img src="https://chart.googleapis.com/chart?cht=qr&chl=Hello+World&chs=160x160&chld=L|0"
                                                class="qr-code img-thumbnail img-responsive"  id="generate">
                                             <div class="form-horizontal">
                                               <div class="form-group">
-                                                  <p type="text"  id="content" style="display:none">https://www.ntpu.edu.tw/chinese/
+                                                  <p type="text"  id="content" style="display:none">http://usrsoc.ntpu.edu.tw/events/2018-10-19-events.html
                                               </div>
                                             </div>
                                           </div>
@@ -187,12 +187,12 @@
                                     <tbody>
                                         <tr>
                                             <td style="width:20%;">
-                                                <p style="margin-bottom:0px;">08-26</p>
-                                                <p style="margin-bottom:0px;">03:00pm</p>
+                                                <p style="margin-bottom:0px;">11-09</p>
+                                                <p style="margin-bottom:0px;">10:00am</p>
                                                 <p style="margin-bottom:0px;">USR</p>
                                             </td>
-                                            <td style="width:25%;">音樂會</td>
-                                            <td style="width:25%;">祖孫情音樂會</td>
+                                            <td style="width:25%;">講座</td>
+                                            <td style="width:25%;">高齡社區系列講座：高齡者與醫療自主</td>
                                             <td>
                                               <div class="container-fluid">
                                                 <img src="https://chart.googleapis.com/chart?cht=qr&chl=Hello+World&chs=160x160&chld=L|0"
@@ -200,7 +200,7 @@
 
                                                 <div class="form-horizontal">
                                                   <div class="form-group">
-                                                      <p type="text"  id="content" style="display:none">https://www.ntpu.edu.tw/chinese/
+                                                      <p type="text"  id="content" style="display:none">http://usrsoc.ntpu.edu.tw/events/2018-11-09-events.html
                                                   </div>
                                                 </div>
                                               </div>
@@ -216,12 +216,12 @@
                                     <tbody>
                                         <tr>
                                             <td style="width:20%;">
-                                                <p style="margin-bottom:0px;">08-26</p>
-                                                <p style="margin-bottom:0px;">03:00pm</p>
+                                                <p style="margin-bottom:0px;">11-14</p>
+                                                <p style="margin-bottom:0px;">02:30pm</p>
                                                 <p style="margin-bottom:0px;">USR</p>
                                             </td>
-                                            <td style="width:25%;">音樂會</td>
-                                            <td style="width:25%;">祖孫情音樂會</td>
+                                            <td style="width:25%;">電影賞析</td>
+                                            <td style="width:25%;">高齡電影賞析：桃姐</td>
                                             <td>
                                               <div class="container-fluid">
                                                 <img src="https://chart.googleapis.com/chart?cht=qr&chl=Hello+World&chs=160x160&chld=L|0"
@@ -229,7 +229,7 @@
 
                                                 <div class="form-horizontal">
                                                   <div class="form-group">
-                                                      <p type="text"  id="content" style="display:none">https://www.ntpu.edu.tw/chinese/
+                                                      <p type="text"  id="content" style="display:none">http://usrsoc.ntpu.edu.tw/events/2018-11-14-events.html
                                                   </div>
                                                 </div>
                                               </div>
@@ -245,12 +245,12 @@
                                   <tbody>
                                       <tr>
                                           <td style="width:20%;">
-                                              <p style="margin-bottom:0px;">08-26</p>
-                                              <p style="margin-bottom:0px;">03:00pm</p>
-                                              <p style="margin-bottom:0px;">學生會</p>
+                                              <p style="margin-bottom:0px;">11-26</p>
+                                              <p style="margin-bottom:0px;">02:30pm</p>
+                                              <p style="margin-bottom:0px;">USR</p>
                                           </td>
-                                          <td style="width:25%;">音樂會</td>
-                                          <td style="width:25%;">祖孫情音樂會</td>
+                                          <td style="width:25%;">電影賞析</td>
+                                          <td style="width:25%;">高齡電影賞析：高年級實習生</td>
                                           <td>
                                             <div class="container-fluid">
                                                     <img src="https://chart.googleapis.com/chart?cht=qr&chl=Hello+World&chs=160x160&chld=L|0"
@@ -258,7 +258,7 @@
 
                                                     <div class="form-horizontal">
                                                       <div class="form-group">
-                                                          <p type="text"  id="content" style="display:none">https://www.ntpu.edu.tw/chinese/
+                                                          <p type="text"  id="content" style="display:none">http://usrsoc.ntpu.edu.tw/events/2018-11-26-events.html
                                                       </div>
                                                     </div>
                                             </div>
