修改活動內容

--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
                                             <p style="margin-bottom:0px;">10:00am</p>
                                             <p style="margin-bottom:0px;">USR</p>
                                         </td>
-                                        <td style="width:25%;">講座</td>
-                                        <td style="width:25%;">高齡社區系列講座：高齡者與災害管理</td>
+                                        <td style="width:25%;">高齡社區系列講座</td>
+                                        <td style="width:25%;">高齡者與災害管理</td>
                                         <td>
                                           <div class="container-fluid">
                                           <img src="https://chart.googleapis.com/chart?cht=qr&chl=Hello+World&chs=160x160&chld=L|0"
@@ -191,8 +191,8 @@
                                                 <p style="margin-bottom:0px;">10:00am</p>
                                                 <p style="margin-bottom:0px;">USR</p>
                                             </td>
-                                            <td style="width:25%;">講座</td>
-                                            <td style="width:25%;">高齡社區系列講座：高齡者與醫療自主</td>
+                                            <td style="width:25%;">高齡社區系列講座</td>
+                                            <td style="width:25%;">高齡者與醫療自主</td>
                                             <td>
                                               <div class="container-fluid">
                                                 <img src="https://chart.googleapis.com/chart?cht=qr&chl=Hello+World&chs=160x160&chld=L|0"
@@ -220,8 +220,8 @@
                                                 <p style="margin-bottom:0px;">02:30pm</p>
                                                 <p style="margin-bottom:0px;">USR</p>
                                             </td>
-                                            <td style="width:25%;">電影賞析</td>
-                                            <td style="width:25%;">高齡電影賞析：桃姐</td>
+                                            <td style="width:25%;">高齡電影賞析</td>
+                                            <td style="width:25%;">桃姐</td>
                                             <td>
                                               <div class="container-fluid">
                                                 <img src="https://chart.googleapis.com/chart?cht=qr&chl=Hello+World&chs=160x160&chld=L|0"
@@ -249,8 +249,8 @@
                                               <p style="margin-bottom:0px;">02:30pm</p>
                                               <p style="margin-bottom:0px;">USR</p>
                                           </td>
-                                          <td style="width:25%;">電影賞析</td>
-                                          <td style="width:25%;">高齡電影賞析：高年級實習生</td>
+                                          <td style="width:25%;">高齡電影賞析</td>
+                                          <td style="width:25%;">高年級實習生</td>
                                           <td>
                                             <div class="container-fluid">
                                                     <img src="https://chart.googleapis.com/chart?cht=qr&chl=Hello+World&chs=160x160&chld=L|0"
