--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                     <div class="carousel slide" data-ride="carousel" data-interval="13000" id="carousel-1" style="min-height:470px;height:470px;">
                         <div class="carousel-inner d-block" role="listbox" style="width:auto;">
                             <div class="carousel-item" style="height:496px;"><img class="w-100 d-block" src="assets/img/S__24641574.jpg" alt="Slide Image"></div>
-                            <div class="carousel-item"><img class="w-100 d-block" src="https://i.imgur.com/O0LZitA.jpg" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="https://i.imgur.com/rnmUZAq.jpg" alt="Slide Image"></div>
                             <div class="carousel-item active"><img class="w-100 d-block" src="https://scontent.ftpe7-1.fna.fbcdn.net/v/t1.0-9/40291392_1989146941105993_3859737124362256384_n.jpg?_nc_fx=ftpe7-3&amp;_nc_cat=0&amp;oh=982e56f390793fa7485ae35b7b539008&amp;oe=5C2F398F" alt="Slide Image"></div>
                             <div
                                 class="carousel-item"><img class="w-100 d-block" src="https://scontent.ftpe7-1.fna.fbcdn.net/v/t1.0-9/40139618_1986860151334672_7559611769216303104_n.jpg?_nc_fx=ftpe7-3&amp;_nc_cat=0&amp;oh=9069bd43768a339ed6ca410838739ece&amp;oe=5BED97E8" alt="Slide Image"></div>
