--- a/index.html
+++ b/index.html
@@ -314,19 +314,25 @@
                   <!-- add the data-interval setting to control the duration of each slide -->
                     <div class="carousel slide" data-ride="carousel" data-interval="13000" id="carousel-1" style="min-height:470px;height:470px;">
                         <div class="carousel-inner d-block" role="listbox" style="width:auto;">
+                            <!-- 海報1 -->
                             <div class="carousel-item" style="height:496px;"><img class="w-100 d-block" src="assets/img/S__24641574.jpg" alt="Slide Image"></div>
+                            <!-- 海報2 -->
                             <div class="carousel-item"><img class="w-100 d-block" src="https://i.imgur.com/rnmUZAq.jpg" alt="Slide Image"></div>
-                            <div class="carousel-item active"><img class="w-100 d-block" src="https://scontent.ftpe7-1.fna.fbcdn.net/v/t1.0-9/40291392_1989146941105993_3859737124362256384_n.jpg?_nc_fx=ftpe7-3&amp;_nc_cat=0&amp;oh=982e56f390793fa7485ae35b7b539008&amp;oe=5C2F398F" alt="Slide Image"></div>
-                            <div
-                                class="carousel-item"><img class="w-100 d-block" src="https://scontent.ftpe7-1.fna.fbcdn.net/v/t1.0-9/40139618_1986860151334672_7559611769216303104_n.jpg?_nc_fx=ftpe7-3&amp;_nc_cat=0&amp;oh=9069bd43768a339ed6ca410838739ece&amp;oe=5BED97E8" alt="Slide Image"></div>
-                    </div>
+                            <!-- 海報3 -->
+                            <div class="carousel-item active"><img class="w-100 d-block" src="" alt="Slide Image"></div>
+                            <!-- 海報4 -->
+                            <div class="carousel-item"><img class="w-100 d-block" src="" alt="Slide Image"></div>
+                        </div>
                     <div class="invisible"><a class="carousel-control-prev" href="#carousel-1" role="button" data-slide="prev"><span class="carousel-control-prev-icon"></span><span class="sr-only">Previous</span></a><a class="carousel-control-next" href="#carousel-1" role="button"
                             data-slide="next"><span class="carousel-control-next-icon"></span><span class="sr-only">Next</span></a></div>
                     <ol class="carousel-indicators" style="margin-bottom:-9px;color:#ffffff;background-color:#f7f5f5;height:9px;padding-top:3px;">
                         <li data-target="#carousel-1" data-slide-to="0"></li>
                         <li data-target="#carousel-1" data-slide-to="1"></li>
-                        <li data-target="#carousel-1" data-slide-to="2" class="active"></li>
-                        <li data-target="#carousel-1" data-slide-to="3"></li>
+
+                        <!-- 目前海報3 4的indicator button，先註解掉 -->
+
+                        <!-- <li data-target="#carousel-1" data-slide-to="2" class="active"></li>
+                        <li data-target="#carousel-1" data-slide-to="3"></li> -->
                     </ol>
                 </div>
             </div>
