--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
                                     <div class="card-container manual-flip">
                                         <div class="card">
                                             <div class="card-body d-flex align-content-start front">
-                                                <figure class="figure" style="margin-right:10px;"><img class="img-fluid figure-img zoomImage rounded" src="https://upload.cc/i1/2018/08/30/eGh92C.jpg"></figure>
+                                                <figure class="figure" style="margin-right:10px;"><img class="img-fluid figure-img zoomImage rounded" src="https://i.imgur.com/0O3Nlsq.png"></figure>
                                                 <div class="d-flex flex-column flex-wrap" style="margin-left:10px;">
                                                     <div>
-                                                        <h4><strong>歷史系辛法春老師協助完拍「不老時光機」節目</strong><br></h4><button class="btn btn-info btn-sm btn-outline-light" type="button" style="background-color:rgb(23,162,184);font-size:12.5px;height:20px;color:rgb(255,255,255);padding-top:0px;margin-bottom:7px;margin-top:2px;">老年人口</button>
-                                                        <p style="font-size: 17px">由社科院老人USR計劃與中嘉電視台合作的「不老時光機」節目於八月底正式完拍。透過遊戲方式促進長者對生命的反思與安頓，一起期待在北大特區的首映會吧！</p>
+                                                        <h4><strong>社科院USR發表「社工系志工隊」簡介影片</strong><br></h4><button class="btn btn-info btn-sm btn-outline-light" type="button" style="background-color:rgb(23,162,184);font-size:12.5px;height:20px;color:rgb(255,255,255);padding-top:0px;margin-bottom:7px;margin-top:2px;">社科院社會實踐計畫</button>
+                                                        <p style="font-size: 17px">王群同學所拍攝的志工隊影片全長約15分鐘，訪問對象包括志工隊幹部、合作單位負責人、社科院曾敏傑院長、以及志工隊魏希聖指導老師等多人，透過影片可以看到本校社工系志工隊的服務樣態、同學的心得、機構的觀點、以及老師們的期待等。</p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -60,25 +60,26 @@
                                 </div>
 
                                 <!-- USR活動跑馬燈2 -->
-                                <div class="carousel-item active"><img class="w-100 d-block" src="http://placeholdit.imgix.net/~text?txtsize=42&amp;txt=Carousel+Image&amp;w=1400&amp;h=600" alt="Slide Image" style="height:0px;">
+                                <div class="carousel-item active"><img class="w-100 d-block" src="https://i.imgur.com/z8nhGVE.jpg" alt="Slide Image" style="height:0px;">
                                     <div class="card-container manual-flip">
                                         <div class="card">
                                             <div class="card-body d-inline-flex justify-content-around align-content-start front">
                                                 <figure class="figure flex-shrink-0 rounded" style="margin-right:10px;height:250px;width:210px;margin-bottom:5px;"><img class="figure-img rounded" src="https://i.imgur.com/ZJ2NNI5.jpg" style="width:100%;height:100%;"></figure>
                                                 <div class="d-flex flex-column flex-wrap" style="margin-left:10px;">
-                                                    <h3><strong>北大祖孫情音樂會</strong></h3>
-                                                    <div class="d-inline-flex justify-content-start align-items-center"><button class="btn btn-info btn-sm btn-outline-light" type="button" style="background-color:rgb(23,162,184);font-size:12.5px;height:20px;color:rgb(255,255,255);padding-top:0px;margin:2.5px;margin-bottom:2px;margin-top:2px;margin-right:2px;">老人年口</button>
-                                                        <button
-                                                            class="btn btn-info btn-sm btn-outline-light" type="button" style="background-color:rgb(23,162,184);font-size:12.5px;height:20px;color:rgb(255,255,255);padding-top:0px;margin:2.5px;margin-top:2px;">婦幼年口</button><button class="btn btn-info btn-sm btn-outline-light" type="button" style="background-color:rgb(23,162,184);font-size:12.5px;height:20px;color:rgb(255,255,255);padding-top:0px;margin:2.5px;margin-bottom:2px;margin-top:2px;">社區經營</button></div>
+                                                    <h3><strong>高齡社區系列講座：高齡者與災害管理</strong></h3>
+                                                    <div class="d-inline-flex justify-content-start align-items-center">
+                                                      <button class="btn btn-info btn-sm btn-outline-light" type="button" style="background-color:rgb(23,162,184);font-size:12.5px;height:20px;color:rgb(255,255,255);padding-top:0px;margin:2.5px;margin-bottom:2px;margin-top:2px;margin-right:2px;">老人年口</button>
+                                                      <button class="btn btn-info btn-sm btn-outline-light" type="button" style="background-color:rgb(23,162,184);font-size:12.5px;height:20px;color:rgb(255,255,255);padding-top:0px;margin:2.5px;margin-top:2px;">社區系列講座</button>
+                                                      <button class="btn btn-info btn-sm btn-outline-light" type="button" style="background-color:rgb(23,162,184);font-size:12.5px;height:20px;color:rgb(255,255,255);padding-top:0px;margin:2.5px;margin-bottom:2px;margin-top:2px;"></button></div>
                                                     <div
                                                         class="d-inline-flex align-items-center flex-nowrap" style="margin:1px;"><i class="fa fa-clock-o" style="font-size:20px;"></i>
-                                                        <p style="margin-bottom:0px;margin-left:10px;font-size:17px;">8/26 (三）15:00 ~ 18:00&nbsp;</p>
+                                                        <p style="margin-bottom:0px;margin-left:10px;font-size:17px;">10/19 (五）10:00 ~ 11:30&nbsp;</p>
                                                 </div>
                                                 <div class="d-inline-flex align-items-start flex-nowrap" style="margin:1px;margin-left:0px;"><i class="icon ion-ios-location" style="font-size:20px;margin-left:3px;"></i>
-                                                    <p style="margin-bottom:0px;margin-left:10px;font-size:17px;">國立臺北大學商學院國際會議廳</p>
+                                                    <p style="margin-bottom:0px;margin-left:10px;font-size:17px;">三峽北大公共托老中心(三峽區學成路396號2樓之一)</p>
                                                 </div>
                                                 <div class="d-inline-flex align-items-start flex-nowrap" style="margin:1px;margin-left:0px;"><i class="far fa-thumbs-up" style="font-size:20px;margin-left:3px;"></i>
-                                                    <p style="margin-bottom:0px;margin-left:10px;font-size:17px;">為響應「祖父母節」與落實大學社會責任，社科院USR計劃與著名「柏拉奇管弦樂團」合作舉辦本音樂會，以達祖孫同歡與世代共樂之目的，歡迎社區扶老偕幼參加！</p>
+                                                    <p style="margin-bottom:0px;margin-left:10px;font-size:17px;">「高齡電影賞析」及「高齡者社區系列講座」，即日起開放報名，活動完全免費，歡迎師生與社區民眾參加。</p>
                                                 </div>
                                             </div>
                                         </div>
