--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                     <div class="card-container manual-flip">
                                         <div class="card">
                                             <div class="card-body d-flex align-content-start front">
-                                                <figure class="figure" style="margin-right:10px;height:50%"><img class="img-fluid figure-img zoomImage rounded" src="https://i.imgur.com/0O3Nlsq.png"></figure>
+                                                <figure class="figure" style="margin-right:10px;width:280%"><img class="img-fluid figure-img zoomImage rounded" style="height:70%" src="https://i.imgur.com/0O3Nlsq.png"></figure>
                                                 <div class="d-flex flex-column flex-wrap" style="margin-left:10px;">
                                                     <div>
                                                         <h4><strong>社科院USR發表「社工系志工隊」簡介影片</strong><br></h4><button class="btn btn-info btn-sm btn-outline-light" type="button" style="background-color:rgb(23,162,184);font-size:12.5px;height:20px;color:rgb(255,255,255);padding-top:0px;margin-bottom:7px;margin-top:2px;">社科院社會實踐計畫</button>
