修改問卷調查文字敘述

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
             <div class="d-flex flex-row align-items-center" style="height: 260px;">
                 <div class="card flex-row" style="margin: 0px;width: 350px;">
                     <div class="card-body d-inline-flex align-items-center" style="width: 180px;height: 175px;padding: 18px;">
-                        <p style="font-size: 17px;margin-bottom: 0px;">想要你的社團活動或關注的議題出現在投影看版嗎？快來說說你的意見（手刀→→</p><img src="assets/img/soclobby_survey_qrcode.png" style="height: 150px;width: 150px;"></div>
+                        <p style="font-size: 17px;margin-bottom: 0px;">想要你的社團活動或關注的議題出現在投影看版嗎？快來分享你的意見（手刀→→</p><img src="assets/img/soclobby_survey_qrcode.png" style="height: 150px;width: 150px;"></div>
                 </div>
             </div>
 
