修改圖片連結

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                                             <td style="width:25%;">桃姐</td>
                                             <td>
                                               <div class="container-fluid">
-                                                <img src="https://imgur.com/nX5yLwH"
+                                                <img src="https://i.imgur.com/QK72Blu.png"
                                                      class="qr-code img-thumbnail img-responsive"  id="generate">
 
                                                 <div class="form-horizontal">
