--- a/index.html
+++ b/index.html
@@ -226,13 +226,8 @@
                                             <td>
                                               <div class="container-fluid">
                                                 <img src="https://i.imgur.com/QK72Blu.png"
-                                                     class="qr-code img-thumbnail img-responsive"  id="generate">
+                                                     class=" img-thumbnail img-responsive"  id="generate">
 
-                                                <div class="form-horizontal">
-                                                  <div class="form-group">
-                                                      <p type="text"  id="content" style="display:none">
-                                                  </div>
-                                                </div>
                                               </div>
                                             </td>
                                         </tr>
