修改圖片路徑

--- a/index.html
+++ b/index.html
@@ -225,9 +225,14 @@
                                             <td style="width:25%;">桃姐</td>
                                             <td>
                                               <div class="container-fluid">
-                                                <img src="https://i.imgur.com/QK72Blu.png"
-                                                     class=" img-thumbnail img-responsive"  id="generate">
+                                                <img src="https://chart.googleapis.com/chart?cht=qr&chl=Hello+World&chs=160x160&chld=L|0"
+                                                     class="qr-code img-thumbnail img-responsive"  id="generate">
 
+                                                <div class="form-horizontal">
+                                                  <div class="form-group">
+                                                      <p type="text"  id="content" style="display:none">http://usrsoc.ntpu.edu.tw/events/2018-11-14-events.html
+                                                  </div>
+                                                </div>
                                               </div>
                                             </td>
                                         </tr>
