--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                                                class="qr-code img-thumbnail img-responsive"  id="generate">
                                             <div class="form-horizontal">
                                               <div class="form-group">
-                                                  <p type="text"  id="content" style="display:none">https://bit.ly/2RrpyWS
+                                                  <p type="text"  id="content1" style="display:none">https://bit.ly/2RrpyWS
                                               </div>
                                             </div>
                                           </div>
@@ -201,7 +201,7 @@
 
                                                 <div class="form-horizontal">
                                                   <div class="form-group">
-                                                      <p type="text"  id="content" style="display:none">https://bit.ly/2NjlGE7
+                                                      <p type="text"  id="content2" style="display:none">https://bit.ly/2NjlGE7
                                                   </div>
                                                 </div>
                                               </div>
@@ -230,7 +230,7 @@
 
                                                 <div class="form-horizontal">
                                                   <div class="form-group">
-                                                      <p type="text"  id="content" style="display:none">https://bit.ly/2IxsHQG
+                                                      <p type="text"  id="content3" style="display:none">https://bit.ly/2IxsHQG
                                                   </div>
                                                 </div>
                                               </div>
@@ -259,7 +259,7 @@
 
                                                     <div class="form-horizontal">
                                                       <div class="form-group">
-                                                          <p type="text"  id="content" style="display:none">https://bit.ly/2DRjtjN
+                                                          <p type="text"  id="content4" style="display:none">https://bit.ly/2DRjtjN
                                                       </div>
                                                     </div>
                                             </div>
