--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                                         <td>
                                           <div class="container-fluid">
                                           <img src="https://chart.googleapis.com/chart?cht=qr&chl=Hello+World&chs=160x160&chld=L|0"
-                                               class="qr-code img-thumbnail img-responsive"  id="generate">
+                                               class="qr-code1 img-thumbnail img-responsive"  id="generate">
                                             <div class="form-horizontal">
                                               <div class="form-group">
                                                   <p type="text"  id="content1" style="display:none">https://bit.ly/2RrpyWS
@@ -197,7 +197,7 @@
                                             <td>
                                               <div class="container-fluid">
                                                 <img src="https://chart.googleapis.com/chart?cht=qr&chl=Hello+World&chs=160x160&chld=L|0"
-                                                     class="qr-code img-thumbnail img-responsive"  id="generate">
+                                                     class="qr-code2 img-thumbnail img-responsive"  id="generate">
 
                                                 <div class="form-horizontal">
                                                   <div class="form-group">
@@ -226,7 +226,7 @@
                                             <td>
                                               <div class="container-fluid">
                                                 <img src="https://chart.googleapis.com/chart?cht=qr&chl=Hello+World&chs=160x160&chld=L|0"
-                                                     class="qr-code img-thumbnail img-responsive"  id="generate">
+                                                     class="qr-code3 img-thumbnail img-responsive"  id="generate">
 
                                                 <div class="form-horizontal">
                                                   <div class="form-group">
@@ -255,7 +255,7 @@
                                           <td>
                                             <div class="container-fluid">
                                                     <img src="https://chart.googleapis.com/chart?cht=qr&chl=Hello+World&chs=160x160&chld=L|0"
-                                                     class="qr-code img-thumbnail img-responsive"  id="generate">
+                                                     class="qr-code4 img-thumbnail img-responsive"  id="generate">
 
                                                     <div class="form-horizontal">
                                                       <div class="form-group">
